提供演示地址

--- a/css/imagezoom.css
+++ b/css/imagezoom.css
@@ -1,7 +1,9 @@
-	body,p{
+	*{
+		font-family: Microsoft YaHei;
 		margin: 0;
 		padding: 0;	
 	}
+	
 	li{
 		list-style-type: none;
 	}
@@ -39,7 +41,7 @@
 		z-index:1;
 	}
 	.thumb{
-		margin: 0 0 0 100px;
+		margin: 0 0 0 200px;
 		padding: 0;
 	}
 	.thumb li{
